[package]

name = "kravanenn"
version = "0.0.1"
authors = [ "Pierre-Marie Pédrot <pierre-marie.pedrot@inria.fr>" ]

[lib]
name = "kravanenn"
path = "src/lib.rs"

[[bin]]
name = "kravanenn"
path = "src/bin/kravanenn.rs"
doc = false

[[bin]]
name = "compactor"
path = "src/bin/compactor.rs"
doc = false

[dependencies]
byteorder = "0.5"
fixedbitset = "0.1.8"
serde = "1.0.16"
serde_derive = "1.0.16"
