[package]

name = "kravanenn"
version = "0.0.1"
authors = [ "Pierre-Marie Pédrot <pierre-marie.pedrot@inria.fr>" ]

[lib]
name = "kravanenn"
path = "src/lib.rs"

[[bin]]
name = "kravanenn"
path = "src/bin/kravanenn.rs"
doc = false

[[bin]]
name = "compactor"
path = "src/bin/compactor.rs"
doc = false

[[bin]]
name = "checker"
path = "src/bin/checker.rs"
doc = false

[dependencies]
byteorder = "0.5"
fixedbitset = "0.1.8"
serde = "1.0.16"
serde_derive = "1.0.16"
serde_state = "0.4.1"
serde_derive_state = "0.4.1"
light_arena = "0.1.1"
vec_map = "0.8.0"
typed-arena = "1.3.0"
bitflags = "1.0.1"
take_mut = "0.2.0"
smallvec = "0.5.0"
lazy-init = "0.2.0"
rayon = "0.9.0"
movecell = "0.2.0"
cuckoo = { git = "https://github.com/pythonesque/libcuckoo.rs", branch = "wip" }
